--- a/exercises/boxes/style.css
+++ b/exercises/boxes/style.css
@@ -1,32 +1,35 @@
 * {
     box-sizing: border-box; 
     font-size: 0px;
+
+	 
 }
 
 .oneBig {
 	width: 80%;
-	height: 100px;
+	height: 125px;
 	background-color: #F5C6D6;
 	margin: auto;
+	
 }
 
 .small1 {
 	width: 25%;
-	height: 100px;
+	height: 125px;
 	background-color: #EE2E84;
 	display: inline-block;
 }
 
 .half {
 	width: 50%;
-	height: 100px;
+	height: 125px;
 	background-color: #85CFD8;
 	display: inline-block;
 }
 
 .green {
 	width: 78%;
-	height: 100px;
+	height: 125px;
 	background-color: #8DC63F;
 	display: inline-block;
 
@@ -34,9 +37,17 @@
 
 .orange {
 	width: 22%;
-	height: 100px;
+	height: 125px;
 	background-color: #E76E34;
 	display: inline-block;
 	
 }
 
+.addBorder {
+	border: 10px solid white;
+}
+
+.margin {
+	
+	margin-top: 90px;
+}
