--- a/exercises/flag-css/Japan/style.css
+++ b/exercises/flag-css/Japan/style.css
@@ -1,32 +1,28 @@
-/*
+
+* {
+    box-sizing: border-box;
+    font-size: 0px;
+}
+
 .parent {
-	
-	background-color: white;
-	height: 100%;
-	width: 100%;
-	
-*/
-	
-	
+    background: white;
+    height: 600px;
+    width: 900px;
+    position: relative;
+    display: inline-block;
+	border: 2px solid lightblue;
 }
 
 .circle {
-	width:100px;
-	height:100px;
-	border-radius:50%;
-	background:#b30000}
+    background: #b30000;
+    height: 300px;
+    width: 300px;
+    border-radius: 50%;
+    position: relative;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: inline-block;
+}
 
-	
-/*
-	
-	background-color:  #b30000;
-	width:100%;
-	height:60px;
-	position: absolute;
-	transform: translate(-50%, -50%);
-	left:50%;
-	top:50%;
-	
-*/
-}
-}
