--- a/projects/mario-pest/style.css
+++ b/projects/mario-pest/style.css
@@ -1,38 +1,82 @@
-header {
-	background-image: url("http://www.mtv.co.uk/sites/default/files/styles/image-w-520-h-520-scale/public/mtv_uk/galleries/large/2016/09/26/25._mario.png?itok=dz-ZxgMV");
-	background-size: cover;
-    height: 300px;
-    background-repeat: no-repeat;
-	border-width: 10Px;
-	border-color: aqua;
+.header {
+	background-image: url("http://www.yellmagazine.com/wp-content/uploads/2012/04/top-10-generic-bad-guys-3-445x215.png");
+	background-repeat: no-repeat;
+	background-size: 100%;
+	height: 400px;
+	
 }
 
 body {
-	background-color: lightgoldenrodyellow;
+	background-color: gold;
+}
+
+.parent {
+	text-align: center;
 }
 
 .badGuys {
+	margin: 30px 40px 0px 40px;
 	align-content: center;
 	display: inline-block;
-	width: 150px;
 	height: 150px;
-	padding: 60px;
-	margin-right: 30px
+}
+
+li {
+	font-size: 22px;
 }
 
 h1 {
 	text-align: center;
 	font-size: 80px;
-	color: yellow;
+	color: gold;
 	font-family: "palatino";
-	text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+	text-shadow: -2px 0 purple, 0 2px purple, 2px 0 purple, 0 -2px purple;
 }
 
 .image {
 	height: 100px;
 	width: 100px;
+	margin: 2px
 }
 
 ul {
-	
 	color: darkblue;
+}
+
+li.total {
+	display: inline-block
+}
+
+input {
+	width: 50px;
+}
+
+#total-all {
+	margin-top: 30px;
+}
+
+footer {
+	margin: 10px;
+	font-size: 14px
+}
+
+.http {
+	position: absolute;
+	left: 0;
+	right: 0;
+	text-align: center;
+}
+
+.address {
+	right: 10px;
+	position: absolute;
+}
+
+@media (max-width: 650px){
+	footer{
+		display: none;
+		}
+	header{
+		width: auto
+	}
+}
