--- a/exercises/design-a-blog/style.css
+++ b/exercises/design-a-blog/style.css
@@ -2,14 +2,18 @@ body{
 	overflow: scroll;
 	background-color: ivory;
 }
+
+div {
+	padding:20px;
+	text-align: center;
+}
 .parent {
 	
-	border:2px;
+	border:20px;
 	background-color:ivory;
 	height: 100%;
 	width: 100%;
 	position: relative;
-*/
 	
 }
 
@@ -18,23 +22,33 @@ header {
 	background-repeat: no-repeat;
 	background-size: cover;
 	height: 400px;
-	
+	padding: 20px
+}
+
+.button {
+	background-color: bisque;
 	
 }
 
+.imageFlower{
+	margin: 15px; 
+	margin: left 20px;
+	float: left;
+	width:100px;
+	height: 100px;
+}
+
 h1 {
+	margin-top: 30px;
 	text-align:center;
 	font-size: 80px;
 	color: purple;
 	font-family: "palatino";
+	text-shadow: -1px 0 yellow, 0 1px black, 1px 0 black, 0 -1px black;
 	
 }
 
-h2 {
+h2, h3, h4{
 	text-align: center;
 }
 
-h3 {
-	text-align: center;
-	
-}
