--- a/exercises/flag-css/maldives/style.css
+++ b/exercises/flag-css/maldives/style.css
@@ -1,5 +1,41 @@
 .redBox {
-	width: 600;
-	height: 450;
+	width: 600px;
+	height: 450px;
+	background-color: red;
+	position:relative;
 	
+}
+
+.greenBox {
+	width: 400px;
+	height: 250px;
+	background-color: green;
+    margin: auto;
+	position: absolute;
+	margin-left: 100px;
+	margin-top: 100px;
+	
+}
+	
+
+.circle2 {
+    background: green;
+    height: 130px;
+    width: 130px;
+    border-radius: 50%;
+	position: absolute;
+    top: 50%;
+    left: 55%;
+    transform: translate(-50%, -50%);
+}
+
+.circle1 {
+    background: white;
+    height: 130px;
+    width: 130px;
+    border-radius: 50%;
+	position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
