--- a/exercises/bootstrap=luigi/style.css
+++ b/exercises/bootstrap=luigi/style.css
@@ -10,12 +10,12 @@
 
 h1 {
 	font-family: mario-font;
-	background-color: yellow;
+	background-color: gold;
 	font-size: 50px;
 }
 
 .yellow {
-	background-color: yellow;
+	background-color: gold;
 }
 
 .imgLuigi {
@@ -42,7 +42,11 @@ p {
 .mushroom {
 	height: 50px;
 	width: 50px;
-	background-color: yellow;
+	background-color: gold;
+	
+	
+}
+.img-responsive {
 	
 	
 }
