--- a/exercises/react-router/src/index.css
+++ b/exercises/react-router/src/index.css
@@ -32,8 +32,12 @@ body {
 .footer {
     background: url("https://images.unsplash.com/photo-1478145046317-39f10e56b5e9?dpr=1&auto=format&fit=crop&w=2734&h=&q=60&cs=tinysrgb&crop=") no-repeat;
     background-size: cover;
-    height: 100px;
+    height: 150px;
     width:100%;
-    background-position: 10% 85%;
+    background-position: 10% 70%;
     align-self: flex-end;
+}
+
+.pageHeight {
+    height: 60vh;
 }
