--- a/exercises/react-todo/src/index.css
+++ b/exercises/react-todo/src/index.css
@@ -3,9 +3,26 @@
     width:300px;
     text-align: center;
     border: 1px solid black;
-    
+    background-color: #FAF3E7;
+    margin:60px;
+    color: #762586;
+
+
 }
 
 .div2{
     text-align: center;
+}
+
+body {
+    background: url(https://images.unsplash.com/uploads/1412171571875cce76035/38b16bbb?dpr=1&auto=format&fit=crop&w=1500&h=&q=60&cs=tinysrgb&crop=), no-repeat center;
+    background-size: cover;
+
+}
+.parent {
+    display:inline-block;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+
 }
