--- a/exercises/messing-around/src/index.css
+++ b/exercises/messing-around/src/index.css
@@ -2,58 +2,68 @@
 background: url(https://images.unsplash.com/photo-1484553255294-313b931acd27?auto=format&fit=crop&w=2852&q=60&ixid=dW5zcGxhc2guY29tOzs7Ozs%3D) no-repeat center center fixed;
 background-size: cover;
 height:100vh;
-
+padding-top: 200px;
+overflow: hidden;
+border: 2px solid gray;
 }
 
 .title {
     text-align: center;
     margin-left: 180px;
-    padding-top: 175px;
     font-size: 40px;
-    font-family: 'Playfair Display', serif;
-    color: black;
-    text-shadow: 0px 1px 0px white;
+    font-family: 'Cormorant Garamond', serif;
+    color: #38185B;
+    text-shadow: 0px 2px 0px white;
+    border-bottom: 1px solid brown;
+    border-top: 1px solid brown;
+    margin-bottom: 20px;
+
 }
 .linkTo {
     text-align: center;
-    margin: auto;
-    font-size: 40px;
+    margin-left: 280px;
+    padding-bottom: 30px;
+    font-size: 30px;
+    width:800px;
     color: white;
     font-family: 'Playfair Display', serif;
     text-decoration: none;
     text-shadow: 0px 1px 0px purple;
     transform: skew(-14deg);
+    border-bottom: solid 1px purple;
 }
 
 .linkTo:hover {
     transform: skew(0deg);
-    -webkit-transition: all .5s linear;
     -moz-transition: all 1s linear;
     -o-transition: all 1s linear;
     transition: all 1s linear;
+    background-color: rgba(140,140,250, 0.3);
+
 }
 .home {
-background: url(https://images.unsplash.com/photo-1510015421824-c3299f9a3dc9?auto=format&fit=crop&w=1950&q=60&ixid=dW5zcGxhc2guY29tOzs7Ozs%3D) no-repeat center center fixed;
+background: url(https://images.unsplash.com/photo-1484553255294-313b931acd27?auto=format&fit=crop&w=2852&q=60&ixid=dW5zcGxhc2guY29tOzs7Ozs%3D) no-repeat center center fixed;
 background-size: cover;
 height: 100vh;
-opacity: .8;
 padding-top: 80px;
 padding-left: 80px;
+
 }
 
 .box1 {
-    height: 350px;
-    width: 600px;
-    border: 1px solid black;
-    background: url(https://images.unsplash.com/photo-1510015421824-c3299f9a3dc9?auto=format&fit=crop&w=1950&q=60&ixid=dW5zcGxhc2guY29tOzs7Ozs%3D)no-repeat center center fixed;
-    opacity: 1;
-    /*background-color: rgba(250,250,250, 0.3);*/
+    height: 250px;
+    width: 500px;
+    border: 1px solid gray;
+    background-color: rgba(140,140,250, 0.3);
+    opacity: .8;
     position: fixed;
 }
 
 .photo {
-    height: 200px;
-    width: 200px;
-    border: 1px solid black;
-    background-image: url("./images/portrait.jpg");
+    height: 180px;
+    width: au;
+    border: 1px solid gray;
+    /*background: url("/images/portrait.jpg");*/
+    margin-left: 30px;
+    margin-top:  30px;
 }
