--- a/poet-tree/src/index.css
+++ b/poet-tree/src/index.css
@@ -1,3 +1,14 @@
 body {
     margin: 0;
 }
+
+/* button from react tutorial, transform */
+
+/* button[disabled],
+input[type=submit][disabled] {
+  color: #d12028;
+  background: #fff;
+  border-color: #d12028;
+  -webkit-transform: rotate(-10deg) scale(2) translateX(50%) translateY(-50%);
+          transform: rotate(-10deg) scale(2) translateX(50%) translateY(-50%);
+} */
