--- a/poet-tree/src/index.css
+++ b/poet-tree/src/index.css
@@ -2,6 +2,13 @@ body {
     margin: 0;
 }
 
+.wordButton {
+    color: black;
+    background: #fff;
+    border-color: black;
+
+
+}
 /* button from react tutorial, transform */
 
 /* button[disabled],
